--- a/apps/coreui/Makefile.am
+++ b/apps/coreui/Makefile.am
@@ -1,7 +1,7 @@
-include ../../../Make.vars
+include ../../Make.vars
 
 EXTRA_DIST=\
-	__init__.py \
+   __init__.py \
    authui.py \
    coreui.py \
    meta.xml \
@@ -14,17 +14,17 @@ EXTRA_DIST=\
 
 # Required for static_www build/install
 MODULE=coreui
-MODULE_BASE_PATH=nox/webapps
-MODULE_BASE_ESCAPE=../..
+MODULE_BASE_PATH=nox/ext/apps
+MODULE_BASE_ESCAPE=../../..
 
 NOX_RUNTIMEFILES = \
-	 __init__.py \
-	 asyncwebserviceclient.py \
-	 authui.py \
-     coreui.py \
-	 meta.xml \
-	 monitorsui.py \
-     template_utils.py
+   __init__.py \
+   asyncwebserviceclient.py \
+   authui.py \
+   coreui.py \
+   meta.xml \
+   monitorsui.py \
+   template_utils.py
 
 DOJO_VERSION=1.2.1
 
@@ -44,20 +44,18 @@ www-clean:
 	rm -rf "$(builddir)/www"
 	rm -rf "$(builddir)/www-dojo-build"
 
-all-local: nox-runtimefiles-build mako-template-build www-build \
-	static-www-build
-clean-local: nox-runtimefiles-clean mako-template-clean www-clean \
-	static-www-clean
+all-local: nox-runtimefiles-build mako-template-build www-build static-www-build
+clean-local: nox-runtimefiles-clean mako-template-clean www-clean static-www-clean
 
 install-exec-hook : nox-install-local
 	rm -rf $(builddir)/www-dojo-build
 	@echo "Copying files to prepare dojo build."
 	cp -rLlf $(builddir)/www $(builddir)/www-dojo-build
 	@echo "Copy complete, starting build.."
-	if [ -f "$(top_srcdir)/src/nox/ext/etc/dojo-build.profile.js" ]; then \
-		(cd www-dojo-build/util/buildscripts; ./build.sh action=release profileFile="../../../$(top_srcdir)/src/nox/ext/etc/dojo-build.profile.js" releaseName="nox-dojo-build" releaseVersion="$(DOJO_VERSION)" optimize=shrinksafe cssOptimize=comments copyTests=false internStrings=true;); \
+	if [ -f "$(top_srcdir)/etc/dojo-build.profile.js" ]; then \
+		(cd www-dojo-build/util/buildscripts; ./build.sh action=release profileFile="$(top_srcdir)/etc/dojo-build.profile.js" releaseName="nox-dojo-build" releaseVersion="$(DOJO_VERSION)" optimize=shrinksafe cssOptimize=comments copyTests=false internStrings=true;); \
 	else \
-		(cd www-dojo-build/util/buildscripts; ./build.sh action=release profileFile="../../../$(top_srcdir)/src/etc/dojo-build.profile.js" releaseName="nox-dojo-build" releaseVersion="$(DOJO_VERSION)" optimize=shrinksafe cssOptimize=comments copyTest=false internStrings=true;); \
+		(cd www-dojo-build/util/buildscripts; ./build.sh action=release profileFile="$(top_srcdir)/src/etc/dojo-build.profile.js" releaseName="nox-dojo-build" releaseVersion="$(DOJO_VERSION)" optimize=shrinksafe cssOptimize=comments copyTest=false internStrings=true;); \
 	fi
 	mkdir -p $(nox_installwwwdir)
 	cp -r www-dojo-build/release/nox-dojo-build/* $(nox_installwwwdir)
