--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS=audit coreui ctlflood dwh ndb pf static_registration exttests \
 	snackui sepl dbexplorer webservice_testui miscws failover \
 	notification captiveportal debug local_config dhcp \
 	redirproxy restracker storage configuration visibility \
-	default_switch_approval
+	default_switch_approval switchconfig
 
 SUBDIRS += $(MODULES_apps)
 
