Changes to makefiles for meta.json

--- a/apps/audit/Makefile.am
+++ b/apps/audit/Makefile.am
@@ -1,7 +1,7 @@
 include ../../Make.vars 
 
 EXTRA_DIST =\
-	meta.xml
+	meta.json
 
 pkglib_LTLIBRARIES =		\
 	audit.la
@@ -10,7 +10,7 @@ audit_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(srcdir)/../ -I$(top_srcdir)/../ -I$(top_s
 audit_la_SOURCES = audit.cc
 audit_la_LDFLAGS = -module -export-dynamic
 
-NOX_RUNTIMEFILES = meta.xml	
+NOX_RUNTIMEFILES = meta.json	
 
 all-local: nox-all-local 
 clean-local: nox-clean-local
