--- a/apps/debug/Makefile.am
+++ b/apps/debug/Makefile.am
@@ -1,7 +1,7 @@
 include ../../Make.vars 
 
 EXTRA_DIST =\
-	meta.xml
+	meta.json
 
 if PY_ENABLED
 AM_CPPFLAGS += $(PYTHON_CPPFLAGS)
@@ -14,7 +14,7 @@ malloc_monitor_la_CPPFLAGS = $(AM_CPPFLAGS) -I$(srcdir)/../ -I$(top_srcdir)/../ 
 malloc_monitor_la_SOURCES = malloc_monitor.cc
 malloc_monitor_la_LDFLAGS = -module -export-dynamic
 
-NOX_RUNTIMEFILES = meta.xml	
+NOX_RUNTIMEFILES = meta.json	
 
 all-local: nox-all-local
 clean-local: nox-clean-local 
