--- a/apps/local_config/Makefile.am
+++ b/apps/local_config/Makefile.am
@@ -3,13 +3,13 @@ include ../../Make.vars
 SUBDIRS=debian
 
 EXTRA_DIST = \
-	meta.xml \
+	meta.json \
 	interface_change_event.py \
 	local_config.py \
 	local_configws.py \
 	__init__.py 
 
-NOX_RUNTIMEFILES = meta.xml	\
+NOX_RUNTIMEFILES = meta.json	\
 	interface_change_event.py \
 	local_config.py \
 	local_configws.py \
