--- a/apps/miscws/Makefile.am
+++ b/apps/miscws/Makefile.am
@@ -1,6 +1,6 @@
 include ../../Make.vars
 
-NOX_RUNTIMEFILES = meta.xml __init__.py hosttrackerws.py policyws.py protocolsws.py eventws.py principal_ws_test.py topograph.py noxgraph.py movable_css.js graphable.css node.gif logws.py
+NOX_RUNTIMEFILES = meta.json __init__.py hosttrackerws.py policyws.py protocolsws.py eventws.py principal_ws_test.py topograph.py noxgraph.py movable_css.js graphable.css node.gif logws.py
 
 all-local: nox-runtimefiles-build
 clean-local: nox-runtimefiles-clean
