--- a/apps/webservice_testui/Makefile.am
+++ b/apps/webservice_testui/Makefile.am
@@ -4,7 +4,7 @@ MODULE=webservice_testui
 MODULE_BASE_PATH=nox/ext/apps
 MODULE_BASE_ESCAPE=../../..
 
-NOX_RUNTIMEFILES = meta.xml __init__.py webservice_testui.py
+NOX_RUNTIMEFILES = meta.json __init__.py webservice_testui.py
 
 all-local: nox-runtimefiles-build mako-template-build static-www-build
 clean-local: nox-runtimefiles-clean mako-template-clean static-www-clean
