--- a/apps/switchconfig/Makefile.am
+++ b/apps/switchconfig/Makefile.am
@@ -1,11 +1,11 @@
 include ../../Make.vars 
 
 EXTRA_DIST = \
-	meta.xml \
+	meta.json \
 	__init__.py \
 	switchconfig.py 
 
-NOX_RUNTIMEFILES = meta.xml	\
+NOX_RUNTIMEFILES = meta.json	\
 	__init__.py	\
 	switchconfig.py
 
