Fix build with automake 1.9.6

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_CPP
 
-AC_USE_SYSTEM_EXTENSIONS
+dnl AC_USE_SYSTEM_EXTENSIONS
 AC_SYS_LARGEFILE
 
 AC_DISABLE_STATIC
