More progress towards CentOS support: implement rpm packaging and add network config glue to local_config app

--- a/configure.ac
+++ b/configure.ac
@@ -99,6 +99,7 @@ apps/redirproxy/Makefile
 apps/restracker/Makefile
 apps/local_config/Makefile
 apps/local_config/debian/Makefile
+apps/local_config/redhat/Makefile
 apps/visibility/Makefile
 ])
 
